deployment_files/application_install_files/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: zigbee.local.yourdomain.com
      http:
        paths:
          - backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
  - hosts:
    - local.markhamslab.com 
    secretName: zigbee-local-your_domain_name-com-tls
